--- a/README
+++ b/README
@@ -16,5 +16,4 @@ Usage: run program with -h or --help
 NOTE: derived from the RSA Data Security, Inc. MD5 Message-Digest Algorithm
 
 Authors:
-	Mikhail Startsev  // He wanted to be the first. Okay
-	Roman Bolshakov
+	Mikhail Startsev	Roman Bolshakov
