--- a/README
+++ b/README
@@ -27,7 +27,7 @@ Authors:
     
     Файл дополняется соответствующим числом символов '\0' до длины, кратной 128. 
 
-I. Алгоритм гнерации ключей: 
+I. Алгоритм генерации ключей: 
     
     Порождаем псевдослучайную последовательность последними 4 байтами хэша ключа.
     Считаем K0 = Key
@@ -42,7 +42,7 @@ I. Алгоритм гнерации ключей:
 	4) Повторяем, увеличивая i на 1, пока не будет сгенерировано нужное число ключей.
     Раундовые ключи - ключи с номерами от 1 и далее
 
-II. Функция F сети Феёстеля
+II. Функция F сети Фейстеля
     
 	1) Предподсчитывается массив R из 1<<24 чисел псевдослучайной последовательности, порождённой последними 4 байтами H(Key)
 	2) F(K, L) = R[ H(K+L) mod 1<<24 ] + R[ H(K xor L) mod 1<<24 ],
