Key validity check removed.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-/This program implements block cryptography algorithm based on Feistel network.
+This program implements block cryptography algorithm based on Feistel network.
 Block size: 128 bit
 Key size: 64 bit
 
